[package]
authors = ['Anonymous']
description = 'FRAME pallet BAND bridge'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'band_bridge'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.borsh]
default-features = true
version = '0.3.0'

[dependencies]
sp-std = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '3e651110aa06aa835790df63410a29676243fc54' }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.frame-system]
default-features = false
version = '2.0.0-alpha.6'
[dev-dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.6'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.6'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'sp-runtime/std',
]
